
SET(BUILD_DRIVERS_LIB OFF)

if(BUILD_NPOS220)
    aux_source_directory(NPOS220 TEMPVAL)
    list(APPEND DRIVERS_SRC_FILES ${TEMPVAL})
    SET(BUILD_DRIVERS_LIB ON)
endif()

if(BUILD_DRIVERS_LIB)
    add_library(BORIS_DRIVERS_DRIVERS_LIB ${DRIVERS_SRC_FILES}) 
    target_include_directories(BORIS_DRIVERS_DRIVERS_LIB PUBLIC ${BORIS_DRIVERS_INCLUDE_DIRS})
    if(BORIS_SERIAL_FOUND)
        target_link_libraries(BORIS_DRIVERS_DRIVERS_LIB PUBLIC ${BORIS_SERIAL_LIBRARIES})
        target_include_directories(BORIS_DRIVERS_DRIVERS_LIB PUBLIC ${BORIS_SERIAL_INCLUDE_DIRS})
    endif()
    SET(BORIS_DRIVERS_DRIVERS_LIBRARIES BORIS_DRIVERS_DRIVERS_LIB PARENT_SCOPE)
else()

endif()
