

SET(TEST_INCLUDE_DIRS 
    ${OpenCV_INCLUDE_DIRS}
    ${BORIS_PNC_COMMON_INCLUDE_DIRS} ${BORIS_SERIAL_INCLUDE_DIRS}
    ${BORIS_DRIVERS_INCLUDE_DIRS}
    )

SET(TEST_LINKED_LIBRARIES 
    ${OpenCV_LIBS} 
    ${BORIS_PNC_COMMON_LIBRARIES} ${BORIS_SERIAL_LIBRARIES}
    ${BORIS_DRIVERS_LIBRARIES} 
    )

add_executable(test_NPOS220D test_NPOS220.cpp)
target_link_libraries(test_NPOS220D ${TEST_LINKED_LIBRARIES})
target_include_directories(test_NPOS220D PUBLIC ${TEST_INCLUDED_DIRS})